# wilcoanalysis

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.codex/skills/wilcoanalysis-project/: SKILL.md
.github/workflows/: deploy-cloud-run.yml  deploy-pipeline-job.yml  deploy-streamlit-service.yml
scripts/: 01_profile_owner_data.py  02_owner_segments.py  02_view_data.py  03_multi_property_owners.py  03_owner_type_geo_analysis.py  04_detect_suspicious_owners.py  04_multi_property_owners.py  run_owner_pipeline.ps1  run_owner_pipeline.py  run_owner_pipeline_gcs_job.py
src/owner_ml/: __init__.py  data.py  features.py
